# verzel_dinamica_final

./: .gitignore  README.md
backend/: .flake8  backend_rag.py  db_connection.py  pyproject.toml  start_backend.sh  test_consome_db.py
backend/docs/: README.md  rosana_desk_readme.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx
